@@ -14,7 +14,6 @@ import javax.swing.table.TableColumnModel;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 插件设置页面的表格
@@ -164,7 +163,7 @@ public class PluginSettingPictureUrlTable extends JBTable {
                 List<String> chosenPictureUrlList = fileList.stream()
                     .map(VirtualFile::getUrl)
                     .filter(pictureUrl -> !pictureUrlList.contains(pictureUrl))
-                    .collect(Collectors.toList());
+                    .toList();
                 if (chosenPictureUrlList.size() != 0) {
                     pictureUrlList.addAll(chosenPictureUrlList);
                     LOG.info("add rows: " + chosenPictureUrlList);
